infra/k8s/auth-db.yaml
apiVersion: v1
kind: Service
metadata:
  name: auth-db-srv
spec:
  ports:
  - port: 3306
    targetPort: 5432
  selector:
    app: auth-db
  clusterIP: None
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth-db
spec:
  selector:
    matchLabels:
      app: auth-db
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: auth-db
    spec:
      containers:
      - image: postgres:12
        name: auth-db-postgres
        ports:
        - containerPort: 5432
          name: auth-db
        volumeMounts:
        - name: auth-db-persistent-storage
          mountPath: /var/lib/auth
      volumes:
      - name: auth-db-persistent-storage
        persistentVolumeClaim:
          claimName: auth-db-pv-claim
